--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="DayFour.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
