--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="DayFive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DaySix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
