Completed Day Eight

--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DayEight.h" />
     <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayOne.h" />
