--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="DayEight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayNine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
