--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="DaySix.h" />
     <ClInclude Include="DayTen.h" />
     <ClInclude Include="DayThree.h" />
+    <ClInclude Include="DayTwelve.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
   <ItemGroup>
