--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="DayEleven.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayTwelve.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
