Completed Day 13 Part 1

--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DaySix.h" />
     <ClInclude Include="DayTen.h" />
+    <ClInclude Include="DayThirteen.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwelve.h" />
     <ClInclude Include="DayTwo.h" />
