--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="DayFourteen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFifteen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
