Completed Day 16 Part 1

--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="DayOne.h" />
     <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DaySix.h" />
+    <ClInclude Include="DaySixteen.h" />
     <ClInclude Include="DayTen.h" />
     <ClInclude Include="DayThirteen.h" />
     <ClInclude Include="DayThree.h" />
