--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="DaySixteen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DaySeventeen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
