Completed Day 18 Part 1

--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DayEight.h" />
+    <ClInclude Include="DayEighteen.h" />
     <ClInclude Include="DayEleven.h" />
     <ClInclude Include="DayFifteen.h" />
     <ClInclude Include="DayFive.h" />
