Completed Day 22 Part 1

--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="DayEighteen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayNineteen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DayTwentyTwo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Results.cpp">
