--- a/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayFourteen.h" />
     <ClInclude Include="DayNine.h" />
+    <ClInclude Include="DayNineteen.h" />
     <ClInclude Include="DayOne.h" />
     <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DaySeventeen.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="DayThirteen.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwelve.h" />
+    <ClInclude Include="DayTwentyTwo.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
   <ItemGroup>
