--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="AOC2015.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayOne.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwo.h" />
