--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj.filters
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="DayFive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DaySix.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
