Completed Day 12 Part 1

--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj.filters
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="DaySix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DaySeven.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DayTwelve.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
