--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
@@ -145,8 +145,10 @@
     <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayOne.h" />
+    <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DaySix.h" />
     <ClInclude Include="DayThree.h" />
+    <ClInclude Include="DayTwelve.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
