--- a/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj
+++ b/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj
@@ -142,7 +142,9 @@
     <ClCompile Include="AOC2016.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayOne.h" />
+    <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
