--- a/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
+++ b/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="DayTwo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayThree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DayFour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
