--- a/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
+++ b/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="DaySix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DaySeven.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
