--- a/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj
+++ b/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="md5.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayEight.h" />
     <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayOne.h" />
