Completed 2016 Day 9 Part 1

--- a/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
+++ b/AdventOfCode - 2016/AOC2016/AOC2016.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="DayEight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayNine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
