--- a/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
+++ b/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DayOne.h" />
+    <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
