--- a/AdventOfCode-2017/AOC2017/AOC2017/AOC2017.vcxproj.filters
+++ b/AdventOfCode-2017/AOC2017/AOC2017/AOC2017.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="DayTwo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
