--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="DayOne.h" />
     <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DaySix.h" />
+    <ClInclude Include="DayTen.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwelve.h" />
     <ClInclude Include="DayTwo.h" />
