--- a/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
+++ b/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="AOC2018.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayOne.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwo.h" />
