--- a/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj.filters
+++ b/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="DayThree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
