--- a/AdventOfCode-2017/AOC2017/AOC2017.vcxproj.filters
+++ b/AdventOfCode-2017/AOC2017/AOC2017.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="DaySix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayEight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
