--- a/AdventOfCode-2017/AOC2017/AOC2017.vcxproj
+++ b/AdventOfCode-2017/AOC2017/AOC2017.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="AOC2017.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DayEight.h" />
     <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayFour.h" />
     <ClInclude Include="DayOne.h" />
