Completed 2018 Day 7 Part 1

--- a/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
+++ b/AdventOfCode - 2018/AOC2018/AOC2018.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="DayFive.h" />
     <ClInclude Include="DayOne.h" />
+    <ClInclude Include="DaySeven.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwo.h" />
   </ItemGroup>
