--- a/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
+++ b/AdventOfCode - 2015/AOC2015/AOC2015.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="DayTen.h" />
     <ClInclude Include="DayThree.h" />
     <ClInclude Include="DayTwelve.h" />
+    <ClInclude Include="DayTwentyThree.h" />
     <ClInclude Include="DayTwo.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="hash.h" />
