--- a/AdventOfCode-2019/AOC2019.vcxproj.filters
+++ b/AdventOfCode-2019/AOC2019.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="DayFour.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DayFive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Intcode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
